--- a/pom.xml
+++ b/pom.xml
@@ -11,28 +11,37 @@
         <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-base</artifactId>
-            <version>14</version>
+            <version>11</version>
         </dependency>
         <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-graphics</artifactId>
-            <version>14</version>
+            <version>11</version>
         </dependency>
         <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-controls</artifactId>
-            <version>14</version>
+            <version>11</version>
         </dependency>
         <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-fxml</artifactId>
-            <version>14</version>
+            <version>11</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-jlink-plugin</artifactId>
+            <version>3.0.0-alpha-1</version>
         </dependency>
     </dependencies>
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+        <javafx.version>11</javafx.version>
     </properties>
+
     <build>
         <plugins>
             <plugin>
@@ -47,20 +56,39 @@
                         <configuration>
                             <classifier>spring-boot</classifier>
                             <mainClass>
-                                configure_UPS.MainAppFX
+                                configure_ups.MainAppFX
                             </mainClass>
                         </configuration>
                     </execution>
                 </executions>
             </plugin>
-
-
             <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>exec-maven-plugin</artifactId>
-                <version>1.6.0</version>
+                <groupId>org.openjfx</groupId>
+                <artifactId>javafx-maven-plugin</artifactId>
+                <version>0.0.4</version>
+                <configuration>
+                    <stripDebug>true</stripDebug>
+                    <compress>2</compress>
+                    <noHeaderFiles>false</noHeaderFiles>
+                    <noManPages>false</noManPages>
+                    <launcher>config_UPS</launcher>
+                    <jlinkImageName>resultOfBuildJRI</jlinkImageName>
+                    <jlinkZipName>configure_ups</jlinkZipName>
+                    <mainClass>configure_ups.MainAppFX</mainClass>
+                    <source>11</source>
+                    <target>11</target>
+                    <release>11</release>
+                </configuration>
             </plugin>
-
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.8.1</version>
+                <configuration>
+                    <source>11</source>
+                    <target>11</target>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 
