--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>sudService</groupId>
     <artifactId>configure_jar</artifactId>
-    <version>1.0</version>
+    <version>1.1</version>
     <dependencies>
         <dependency>
             <groupId>org.openjfx</groupId>
@@ -54,7 +54,7 @@
                             <goal>repackage</goal>
                         </goals>
                         <configuration>
-                            <classifier>spring-boot</classifier>
+                            <classifier>spring</classifier>
                             <mainClass>
                                 configure_ups.MainAppFX
                             </mainClass>
